grammar.js
        nu_script: $ => seq(
            optional($.shebang),
            repeat(choice(
                $._declaration,
                // NOTE:
                // in a script, this is not a legal top level item, this is
                // only here to cover `config.nu` and `env.nu`
                prec(-1, $._statement),
            ))
        ),

        cmd_identifier: $ => token(/[_\p{XID_Start}][_\-\p{XID_Continue}]*/),

        identifier: $ => token(/[_\p{XID_Start}][_\p{XID_Continue}]*/),

        _declaration: $ => seq(
            choice(
                $.decl_alias,
                $.decl_def,
                $.decl_export,
                $.decl_extern,
                $.decl_module,
                $.decl_use,
            ),
            optional($._terminator),
        ),

        parameter_pipes: $ => seq(
            PUNC().pipe,
            repeat($.parameter),
            PUNC().pipe,
        ),

        parameter: $ => seq(
            choice(
                $._param_name,
                field("param_long_flag", $.param_long_flag),
                field("param_long_flag", seq(
                    $.param_long_flag,
                    field("flag_capsule", $.flag_capsule),
                )),
            ),
            optional(choice(
                $.param_type,
                $.param_value,
                seq($.param_value, $.param_type),
                seq($.param_type, $.param_value),
            )),
            optional(PUNC().comma),
        ),

        _param_name: $ => choice(
            field("param_rest", $.param_rest),
            field("param_optional", $.param_opt),
            field("param_name", seq(optional("$"), $.identifier)),
            field("param_short_flag", $.param_short_flag),
        ),

        param_type: $ => seq(
            PUNC().colon,
            field("type", choice(
                $.list_type,
                $.collection_type,
                $.flat_type,
            )),
            field("completion", optional($.param_cmd)),
        ),

        flat_type: $ => field("flat_type", FLAT_TYPES()),

        _statement: $ => seq(
            choice(
                $._control,
                $._stmt_hide,
                $._stmt_overlay,
                $.stmt_let,
                $.stmt_mut,
                $.stmt_const,
                $.stmt_register,
                $.stmt_source,
                $.assignment,
                $.pipeline
            ),
            optional($._terminator),
        ),

        /// Controls

        _ctrl_expression: $ => choice(
            field("ctrl_break", KEYWORD().break),
            field("ctrl_continue", KEYWORD().continue),
            $.ctrl_do,
            $.ctrl_if,
            $.ctrl_try,
            $.ctrl_match,
            $.ctrl_return,
        ),

        // Standalone Controls

        pipeline: $ => prec(-69, seq(
            $.pipe_element,
            repeat(seq(
                PUNC().pipe,
                $.pipe_element
            )),
        )),

        pipe_element: $ => prec(-1, choice(
            prec.right(69, $._expression),
            $._ctrl_expression,
            $.where_command,
            $.command,
        )),

        // the where command has a unique argument pattern that breaks the
        // general command parsing, so we handle it separately
        _expression: $ => choice(
            $._value,
            $.expr_binary,
            $.expr_unary,
            $.val_range,
            $.expr_parenthesized,
        ),

        /// Composite Expressions

        expr_unary: $ => {
            const after_not = choice(
                $.val_bool,
                $.expr_parenthesized,
                $.val_variable,
                $.expr_unary,
            );

            return choice(
                seq(OPR().not, after_not),
                seq(
                    OPR().minus,
                    alias(
                        seq(
                            // ensure the expression immediately follows the
                            // opening paren
                            token.immediate(BRACK().open_paren),
                            $.pipeline,
                            BRACK().close_paren
                        ),
                        $.expr_parenthesized
                    )
                ),
            );
        },

        expr_parenthesized: $ => seq(
            BRACK().open_paren,
            optional($.pipeline),
            BRACK().close_paren,
            optional($.cell_path),
        ),

        val_range: $ => {
            const opr = choice(
                OPR().range_exclusive,
                OPR().range_inclusive,
                OPR().range_inclusive2,
            );

            const member = choice(
                $.expr_parenthesized,
                $.val_number,
            );

            const lo = field("lo", member);
            const hi = field("hi", member);

            return prec.right(PREC().range, choice(
                seq(lo, opr, hi),
                seq(lo, opr),
                seq(opr, hi),
            ));
        },

        /// Simple Expressions

        val_nothing: $ => SPECIAL().null,

        val_bool: $ => choice(SPECIAL().true, SPECIAL().false),

        val_variable: $ => choice(
            $._var,
            seq($._var, $.cell_path),
        ),

        _var: $ => seq(
            PUNC().dollar,
            field("name", choice(
                "nu",
                "in",
                "env",
                "nothing",
                $.identifier,
            )),
        ),

        // separating floats from integers does not end well
        // especially when it comes to incorporation with ranges.
        val_number: $ => choice(
            /[+-]?([0-9]+[.])?[0-9]+([eE][-+]?\d+)?/,
            /0x[0-9a-fA-F_]+/,
            /0b[01_]+/,
            /0o[0-7_]+/,
            SPECIAL().pos_infinity,
            SPECIAL().neg_infinity,
            SPECIAL().not_a_number,
        ),

        val_duration: $ => seq(
            field("value", $.val_number),
            field("unit", DURATION_UNIT()),
        ),

        val_filesize: $ => seq(
            field("value", $.val_number),
            field("unit", token.immediate(FILESIZE_UNIT())),
        ),

        val_binary: $ => seq(
            choice("0b", "0o", "0x"),
            token.immediate(BRACK().open_brack),
            repeat(field("digit", seq($.hex_digit, optional(PUNC().comma)))),
            BRACK().close_brack,
        ),

        hex_digit: $ => token(/[0-9a-fA-F]+/),

        val_date: $ => token(
            choice(
                /[0-9]{4}-[0-9]{2}-[0-9]{2}/i,
                /[0-9]{4}-[0-9]{2}-[0-9]{2}T[0-9]{2}:[0-9]{2}:[0-9]{2}(\.[0-9]+)?([Zz]|([\+-])([01]\d|2[0-3]):?([0-5]\d)?)?/,
            ),
        ),

        val_string: $ => choice(
            $._str_double_quotes,
            $._str_single_quotes,
            $._str_back_ticks,
        ),

        _str_double_quotes: $ => seq(
            '"',
            repeat(choice(
                $._escaped_str_content,
                // double quoted strings accept escapes
                $.escape_sequence,
            )),
            '"',
        ),

        _str_single_quotes: $ => /'[^']*'/,

        _str_back_ticks: $ => /`[^`]*`/,

        escape_sequence: $ => token.immediate(seq(
            "\\",
            choice(
                /[^xu]/,
                /u[0-9a-fA-F]{4}/,
                /u{[0-9a-fA-F]+}/,
                /x[0-9a-fA-F]{2}/
            ),
        )),

        /// String Interpolation

        val_interpolated: $ => choice(
            $._inter_single_quotes,
            $._inter_double_quotes,
        ),

        escaped_interpolated_content: $ => token.immediate(prec(1, /[^"\\(]/)),

        unescaped_interpolated_content: $ => token.immediate(prec(1, /[^'(]/)),

        _inter_single_quotes: $ => seq(
            "$'",
            repeat(choice(
                field("expr", $.expr_interpolated),
                $.unescaped_interpolated_content,
            )),
            token.immediate("'"),
        ),

        _inter_double_quotes: $ => seq(
            '$"',
            repeat(choice(
                field("expr", $.expr_interpolated),
                $.inter_escape_sequence,
                // double quoted strings accept escapes
                $.escaped_interpolated_content,
            )),
            token.immediate('"'),
        ),

        inter_escape_sequence: $ => token.immediate(
            seq(
                "\\",
                choice(
                    /[^xu]/,
                    /u[0-9a-fA-F]{4}/,
                    /u{[0-9a-fA-F]+}/,
                    /x[0-9a-fA-F]{2}/,
                    "(", // TODO 
                ),
            )
        ),

        expr_interpolated: $ => seq(
            BRACK().open_paren,
            repeat($._statement),
            BRACK().close_paren,
        ),

        /// Collections

        val_list: $ => seq(
            BRACK().open_brack,
            repeat(field(
                "item",
                seq(
                    choice($._expression, alias($.cmd_identifier, $.val_string)),
                    optional(PUNC().comma)
                ),
            )),
            BRACK().close_brack,
            optional($.cell_path),
        ),

        val_record: $ => seq(
            BRACK().open_brace,
            repeat(field("entry", $.record_entry)),
            BRACK().close_brace,
            optional($.cell_path),
        ),

        record_entry: $ => seq(
            field("key", choice($.identifier, $.val_string)),
            PUNC().colon,
            field("value", choice(
                prec.right(10, $._expression),
                alias($.cmd_identifier, $.val_string)
            )),
            optional(PUNC().comma),
        ),

        val_table: $ => seq(
            BRACK().open_brack,
            field("head", seq($.val_list, PUNC().semicolon)),
            repeat(field("row", $.val_list)),
            BRACK().close_brack,
            optional($.cell_path),
        ),

        val_closure: $ => seq(
            BRACK().open_brace,
            field("parameters", $.parameter_pipes),
            repeat(choice(
                $._statement,
                $._declaration,
            )),
            BRACK().close_brace,
        ),

        /// CellPaths

        command: $ => prec.right(10, choice(
            $.cmd_head,
            $.cmd_head_sub,
        )),

        cmd_head_sub: $ => prec.right(2, seq(
            field("head", seq(optional(PUNC().caret), $.cmd_identifier)),
            field("sub", $.cmd_identifier),
            prec.right(10, repeat($._cmd_arg)),
        )),

        cmd_head: $ => prec.right(1, seq(
            field("head", seq(optional(PUNC().caret), $.cmd_identifier)),
            prec.right(10, repeat($._cmd_arg)),
        )),

        _cmd_arg: $ => choice(
            field("redir", prec.right(10, $.redirection)),
            field("flag", prec.right(9, $._flag)),
            field("arg", prec.right(8, $._value)),
            field("arg", prec.right(8, $.val_range)),
            field("arg", prec.right(7, $.expr_parenthesized)),
            // lowest precedence to make it a last resort
            field("arg_str", alias($.unquoted, $.val_string)),
        ),

        short_flag: $ => token(/-[_\p{XID_Continue}]+/),
